# lark-parser-language-server

./: .editorconfig  .gitignore  .gitlab-ci.yml  .markdownlint.json  .pre-commit-config.yaml  .wakatime-project  CHANGELOG.md  CONTRIBUTING.md  README.md  _config.yml  _toc.yml  pyproject.toml  requirements.dev.txt  requirements.txt  setup.cfg  tbump.toml
src/lark_parser_language_server/: __init__.py  __main__.py  document.py  formatter.py  server.py  symbol_table.py  utils.py  version.py
src/lark_parser_language_server/grammars/: lark4ls.lark
src/lark_parser_language_server/symbol_table/: __init__.py  symbol.py  syntax_tree.py
src/lark_parser_language_server/syntax_tree/: __init__.py  nodes.py
tests/: __init__.py  conftest.py  fixtures.py  test_coverage_completion.py  test_document.py  test_edge_cases.py  test_formatter.py  test_integration.py  test_lark_document.py  test_lark_language_server.py  test_main.py  test_missing_coverage.py  test_parser.py  test_server.py  test_server_functionality.py  test_symbol_table.py  test_symbol_table_errors.py  test_symbol_table_flags.py  test_symbol_table_symbol.py  test_symbol_table_syntax_tree.py  test_symbol_table_validators.py  test_syntax_tree.py  test_syntax_tree_nodes.py
