[project]
name = "lark-parser-language-server"
version = "0.0.0"
description = "Lark Parser Language Server."
authors = [
    {name = "Dynova Development Team", email = "dev@dynova.io"},
    {name = "zodiacfireworks", email = "martin.vuelta@gmail.com"}
]
readme = "README.md"
requires-python = "3.13.7"
dependencies = [
    "pygls (>=1.3.1,<2.0.0)",
    "lark (>=1.3.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
