[project]
name = "lark-parser-language-server"
version = "0.0.0"
description = "Lark Parser Language Server."
authors = [
  { name = "Dynova Development Team", email = "dev@dynova.io" },
  { name = "zodiacfireworks", email = "martin.vuelta@gmail.com" }
]
maintainers = [
  { name = "zodiacfireworks", email = "martin.vuelta@gmail.com" }
]
readme = { file = "README.md", content-type = "text/markdown" }
license = "Apache-2.0"
license-files = ["LICENSE.txt"]
keywords = [
  "Dynova",
  "lark",
  "lark parser",
  "lsp",
  "language-server",
  "language-server-protocol"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Interpreters",
  "Topic :: Software Development :: Code Generators",
  "Topic :: Text Editors :: Integrated Development Environments (IDE)",
  "Topic :: Software Development",
  "Topic :: System",
  "Topic :: Utilities",
  "Typing :: Typed"
]
requires-python = ">=3.9.0,<4.0.0"
dependencies = [
  "pygls (>=1.3.1,<2.0.0)",
  "lark (>=1.3.0,<2.0.0)"
]

[project.urls]
Homepage = "https://github.com/dynovaio/lark-parser-language-server"
Repository = "https://github.com/dynovaio/lark-parser-language-server"
Documentation = "https://dynovaio.github.io/lark-parser-language-server"
Issues = "https://github.com/dynovaio/lark-parser-language-server/issues"
Download = "https://github.com/dynovaio/lark-parser-language-server/archive/refs/tags/v0.0.0.zip"
Changelog = "https://github.com/dynovaio/lark-parser-language-server/blob/master/CHANGELOG.md"
"Bug Tracker" = "https://github.com/dynovaio/lark-parser-language-server/issues"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = true
packages = [
    { include = "lark_parser_language_server", from = "src" },
]
include = [
  "LICENSE.txt",
  "CHANGELOG.md",
]
